# custom-tools

./: .gitignore  License  License.md  Makefile  README.md  constants.py  db.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_tools.py
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: ideas.yml  q-a.yml
.github/workflows/: python-package-ci-cd.yml  python-package-deploy.yml  python-package.yml
docker/: dockerfile.base
docs/: introduction.mdx
src/sayvai_tools/: __init__.py
src/sayvai_tools/tools/: __init__.py  loader.py
src/sayvai_tools/tools/TTS/: __init__.py  tool.py
src/sayvai_tools/tools/audio/: __init__.py  streaming.py
src/sayvai_tools/tools/calendar/: __init__.py  tool.py
src/sayvai_tools/tools/calendar/calendar/: __init__.py  tool.py
src/sayvai_tools/tools/calendar/calendar_sql/: __init__.py  tool.py
src/sayvai_tools/tools/calendar_block/: __init__.py  tool.py
src/sayvai_tools/tools/calender_scheduler/: tool.py
src/sayvai_tools/tools/collect_data_from_user/: __init__.py  collect_data_from_user.py
src/sayvai_tools/tools/conversational_human/: __init__.py  iohuman.py
src/sayvai_tools/tools/date/: __init__.py  tool.py
src/sayvai_tools/tools/display_events/: __init__.py  tool.py
src/sayvai_tools/tools/forms/: __init__.py  tool.py
src/sayvai_tools/tools/google_calendar/: __init__.py  available_slots.py  base.py  create_event.py  display_events.py  utils.py
src/sayvai_tools/tools/google_calendar/calendar_block/: __init__.py
src/sayvai_tools/tools/google_calendar/calendar_sql/: __init__.py
src/sayvai_tools/tools/google_forms/: __init__.py  base.py  create_forms.py  utils.py
src/sayvai_tools/tools/google_sheets/: __init__.py  append_data.py  base.py  create_spreadsheet.py  create_spreedsheet.py  get_cell_values.py  update_spreadsheet.py  utils.py
src/sayvai_tools/tools/pdfreader/: __init__.py  tool.py
src/sayvai_tools/tools/pincone/: tool.py
src/sayvai_tools/tools/pinecone/: __init__.py  tool.py
src/sayvai_tools/tools/power_bi/: __init__.py  dashboard_visualizations_to_csv.py  load_csv_to_powerbi.py  prompt.py  test_api.py  utils.py
src/sayvai_tools/tools/retrive_details/: __init__.py
src/sayvai_tools/tools/retrive_details/retrive_email/: __init__.py  tool.py
src/sayvai_tools/tools/retrive_details/retrive_phone/: __init__.py  tool.py
src/sayvai_tools/tools/retrive_email/: __init__.py  tool.py
src/sayvai_tools/tools/retrive_phone/: __init__.py  tool.py
src/sayvai_tools/tools/send_mail/: __init__.py  tool.py
src/sayvai_tools/tools/spreadsheets/: __init__.py  tool.py
src/sayvai_tools/tools/spreadsheets/gsheets/: __init__.py  tool.py
src/sayvai_tools/tools/spreadsheets/sql_sheets/: __init__.py  prompt.py  tool.py
src/sayvai_tools/tools/sql_database/: __init__.py  prompt.py  tool.py
src/sayvai_tools/tools/twitter/: __init__.py  tool.py
src/sayvai_tools/tools/vectordb/: __init__.py
src/sayvai_tools/tools/vectordb/chromadb/: __init__.py  tool.py
src/sayvai_tools/tools/vectordb/pgvector/: __init__.py  tool.py
src/sayvai_tools/tools/vectordb/pinecone/: __init__.py  tool.py
src/sayvai_tools/tools/youtube/: __init__.py  base.py  utils.py
src/sayvai_tools/tools/youtube/comment_threads/: __init__.py  add_comment.py  list_comments.py
src/sayvai_tools/tools/youtube/comments/: __init__.py  list_comments.py  reply_to_comment.py
src/sayvai_tools/utils/: __init__.py  cal_scheduler.py  constants.py  dbChain.py  dbbase.py  dbchain.py  exception.py  forms.py  gcalendar.py  mail.py  record.py  recording.py  sheets.py  stt.py  tts.py
src/sayvai_tools/utils/database/: dbbase.py  dbchain.py  dbsheetsbase.py  sheetschain.py
src/sayvai_tools/utils/drive/: drivetool.py
src/sayvai_tools/utils/google/: __init__.py  forms.py  gcalendar.py  mail.py  sheets.py
src/sayvai_tools/utils/google/drive/: drivetool.py  service.py
src/sayvai_tools/utils/microsoft/: excel.py  word.py
src/sayvai_tools/utils/pdfreader/: __init__.py  readpdf.py
src/sayvai_tools/utils/system/: __init__.py
src/sayvai_tools/utils/system/properties/: __init__.py  properties.py
src/sayvai_tools/utils/vectorstore/: pineconedb.py
src/sayvai_tools/utils/voice/: __init__.py  recording.py  stt.py  tts.py
src/tools/calendar/: tool.py
src/tools/utils/: gcalendar.py
templates/calendar-events/: README.md  pyproject.toml  test_gcalender.py
templates/calendar-events/gcalendar/: __init__.py  agentcalendar.py  calendaragent.py  create_event.py
templates/getdate/: Readme.md  __init__.py  pyproject.toml  tool_for_date.py
templates/getdate/getdate/: tool_for_date.py
templates/google_sheets/: append_data.py  create_spreedsheet.py  get_cell_values.py  update_spreedsheets.py
templates/rag-pinecone/: RAG_Pinecone.ipynb  README.md  pyproject.toml
templates/rag-pinecone/rag-pinecone/: __init__.py  main.py
templates/sayvai-demo-agent/: .gitignore  README.md  pyproject.toml  run.bat  run.py
templates/sayvai-demo-agent/demoagent/: agent.py
templates/sql-demo-agent/: README.md  pyproject.toml
templates/sql-demo-agent/sql_agent/: to_db.py
templates/youtube/comments/: add_comment.py  list_comment_replies.py  list_comments.py  reply_to_comment.py
tests/: test_getdate.py  test_import.py  test_word.py
tests/calendar/: conftest.py  test_calendar.py
tests/test_loader/: test_tools.py
tests/test_tools/: test_getdate.py
tests/utils/system/: test_init.py
