[tool.poetry]
name = "sayvai-tools"
version = "0.0.3"
description = "A python framwork for customising langchain assiatants."
authors = ["sayvai <sanjaypranav@sayvai.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyaudio = "0.2.11"
openai = "0.28.0"
rich = "13.7.0"
pinecone-client = "2.2.4"
langchain = "0.0.292"
llama-index = "0.8.22"
transformers = "^4.36.2"
sqlalchemy = "2.0.20"
elevenlabs = "0.2.24"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
numpy = "^1.26.3"
google = "^3.0.0"
google-cloud-speech = "^2.23.0"
cloud-sql-python-connector = "^1.5.0"
pg8000 = "^1.30.4"
pgvector = "^0.2.4"
pandas = "^2.1.4"
openpyxl = "^3.1.2"
gspread = "5.11.3"
pydub = "^0.25.1"
oauth2client = "^4.1.3"
pytest = "^7.4.4"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
