[tool.poetry]
name = "sayvai-tools"
version = "0.0.4"
description = "A python framwork for customising langchain assiatants."
authors = ["sayvai <sanjaypranav@sayvai.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
openai = "^1.11.0"
rich = "13.7.0"
pinecone-client = "3.0.2"
llama-index = "0.8.22"
sqlalchemy = "2.0.20"
numpy = "1.26.4"
google = "^3.0.0"
google-cloud-speech = "^2.23.0"
cloud-sql-python-connector = "^1.5.0"
pg8000 = "^1.30.4"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
gspread = "5.11.3"
pydub = "^0.25.1"
oauth2client = "^4.1.3"
pytest = "^7.4.4"
python-dotenv = "^1.0.0"
protobuf = "4.23.4"
google-api-python-client = "^2.116.0"
pymupdf = "^1.23.21"
google-auth-oauthlib = "^1.2.0"
google-auth-httplib2 = "^0.2.0"
langchain = "^0.1.14"
langchain-core = "^0.1.25"
langchain-community = "^0.0.31"
langchain-openai = "^0.1.1"
pydantic = "^1.10.14"
langchain-pinecone = "^0.0.3"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
black = "^24.2.0"
isort = "^5.13.2"
