[tool.poetry]
name = "getdate"
version = "0.1.0"
description = "Get datetime tool"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11 || ^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
