[tool.poetry]
name = "rag-pinecone"
version = "0.1.0"
description = ""
authors = ["sanjaypranav <sanjaypriya195@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
langchain-community = "^0.0.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
